dark mode fixs

--- a/FitMind.frontend/src/app/pages/home/home/home.scss
+++ b/FitMind.frontend/src/app/pages/home/home/home.scss
@@ -19,7 +19,7 @@ display:flex;
 justify-content:space-between;
 align-items:center;
 padding:18px 34px;
-background:#fff;
+background:var(--bg-card);
 box-shadow:0 2px 6px rgba(0,0,0,.03);
 }
 
@@ -28,7 +28,7 @@ box-shadow:0 2px 6px rgba(0,0,0,.03);
 .greeting{
 display:block;
 font-size:15px;
-color:#777;
+color:var(--text-secondary);
 margin-bottom:4px;
 }
 
@@ -37,7 +37,7 @@ display:block;
 font-size:30px;
 font-weight:700;
 line-height:1.1;
-color:#222;
+color:var(--text-primary);
 }
 
 
@@ -67,7 +67,7 @@ width:44px;
 height:44px;
 border:none;
 border-radius:50%;
-background:#f5faf5;
+background:var(--bg);
 display:flex;
 align-items:center;
 justify-content:center;
@@ -77,7 +77,7 @@ transition:.2s;
 }
 
 .notif-btn:hover{
-background:#edf6ed;
+background:var(--bg-hover);
 transform:scale(1.05);
 }
 
